[package]
name = "locked-resource"
version = "0.1.1"
authors = ["Avi ד"]
edition = "2018"
homepage = "https://github.com/Avi-D-coder/locked-resource"
repository = "https://github.com/Avi-D-coder/locked-resource"
description = "Allows you to pass a lock (StdinLock) with it's resource (Stdin)."
license = "MIT/Apache-2.0"

[dependencies]
